# Octo

./: .gitignore  CMakeLists.txt  README.md
Assets/Shaders/: triangle.frag  triangle.vert  triangle.vert.spv
Octo/: CMakeLists.txt
Octo/Private/: Main.cpp
OctoCore/: CMakeLists.txt
OctoCore/Private/: Allocator.cpp  LinearAllocator.cpp  LinearOffsetAllocator.cpp
OctoCore/Public/: Allocator.h  LinearAllocator.h  LinearOffsetAllocator.h
OctoEditor/: CMakeLists.txt
OctoRenderer/: CMakeLists.txt
OctoRenderer/Private/: OctoRenderPassFullScreen.cpp  OctoRenderPassMesh.cpp  OctoRenderProcess.cpp
OctoRenderer/Private/FreeType/: FreetypeLoad.cpp  VkFont.cpp
OctoRenderer/Private/Geometry/: JointTransform.cpp
OctoRenderer/Private/Vulkan/: DrawCallManager.cpp  VkBufferLayoutManager.cpp  VkBufferObject.cpp  VkBufferObjectManager.cpp  VkDrawCallDispatcher.cpp  VkFrameBufferManager.cpp  VkGPUMemoryManager.cpp  VkGpuProgram.cpp  VkImageManager.cpp  VkPipelineLayoutManager.cpp  VkPipelineManager.cpp  VkRenderPassManager.cpp  VkRenderSystem.cpp  VkUniformBufferManager.cpp  VulkanAndroid.cpp  VulkanDebug.cpp  VulkanRendererInitializer.cpp  VulkanSwapChain.cpp  VulkanTextureLoader.cpp  VulkanTools.cpp
OctoRenderer/Public/: OctoRenderPassFullScreen.h  OctoRenderPassMesh.h  OctoRenderProcess.h
OctoRenderer/Public/FreeType/: FreetypeLoad.h
OctoRenderer/Public/Geometry/: JointTransform.h  VertData.h
OctoRenderer/Public/Vulkan/: DrawCallManager.h  VkBufferLayoutManager.h  VkBufferObject.h  VkBufferObjectManager.h  VkDrawCallDispatcher.h  VkEnums.h  VkFrameBufferManager.h  VkGPUMemoryManager.h  VkGpuProgram.h  VkImageManager.h  VkPipelineLayoutManager.h  VkPipelineManager.h  VkRenderPassManager.h  VkRenderSystem.h  VkTexture2D.h  VkUniformBufferManager.h  VulkanAndroid.h  VulkanDebug.h  VulkanRendererInitializer.h  VulkanSwapChain.h  VulkanTextureLoader.h  VulkanTools.h
Scripts/: Config.bat  ConfigAndBuildDependencies.bat  Config_FinalBuild.bat  CopyDllsToAppDir_Debug.bat  CopyDllsToAppDir_Release.bat
