CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(OctoApp)

SET(HEADERS_MAIN
	"Public/Main.h"
)

SET(SOURCES_MAIN
	"Private/Main.cpp"
)
SOURCE_GROUP("Public" FILES ${HEADERS_MAIN})
SOURCE_GROUP("Private" FILES ${SOURCES_MAIN})

ADD_EXECUTABLE(${PROJECT_NAME}
	${HEADERS_MAIN}
	${SOURCES_MAIN}
)


TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	${VULKAN_LIB}
	${SDL2_LIBRARY}
	debug		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/OctoRenderer_d.lib"
	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/OctoRenderer.lib"
	debug		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/OctoCore_d.lib"
	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/OctoCore.lib"
	)
	
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	${CMAKE_SOURCE_DIR}
	"${CMAKE_SOURCE_DIR}/OctoRenderer/Public"
	)